--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/Yordyr06/array-manipulation.git"
   },
-  "keywords": ["javascript"],
+  "keywords": [
+    "javascript"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/Yordyr06/array-manipulation#readme",
   "dependencies": {
+    "date-fns": "^2.30.0",
     "http-server": "^0.12.3"
   }
 }
